Validation, swagger docs
