# controllers/contacts.js
@@ -1,8 +1,22 @@
 const {ObjectId} = require('mongodb');
-const mongodb = require('../db/connect.js');
 const Contact = require('../models/contacts.js');
 
+const checkObjectId = (name = 'id') => (request, response, next) => {
+	if (ObjectId.isValid(request.params[name])) {
+		return next();
+	}
+
+	response.status(400).send('Not a valid object id.');
+};
+
 const getAll = async (request, response) => {
+/*
+	#swagger.description = "Get all the records."
+	#swagger.responses[200] = {
+		description: "The contacts.",
+		schema: { $ref: "#/definitions/ContactArray" }
+	}
+*/
 	try {
 		const result = await Contact.find();
 		response.status(200).json(result);
@@ -12,65 +26,88 @@ const getAll = async (request, response) => {
 };
 
 const getSingle = async (request, response) => {
-	const userId = new ObjectId(request.params.id);
-	const result = await mongodb.getDb().db().collection('contacts').find({_id: userId});
-	result.toArray().then(lists => {
-		response.setHeader('Content-Type', 'application/json');
-		response.status(200).json(lists[0]);
-	});
+/*
+	#swagger.description = "Get a contact by id."
+	#swagger.responses[200] = {
+		description: "The contact.",
+		schema: { $ref: "#/definitions/Contact" }
+	}
+*/
+
+	try {
+		const result = await Contact.findById(request.params.id);
+		response.status(200).json(result);
+	} catch (error) {
+		response.status(500).json(error.message);
+	}
 };
 
 const createContact = async (request, response) => {
-	const contact = {
-		firstName: request.body.firstName,
-		lastName: request.body.lastName,
-		email: request.body.email,
-		favoriteColor: request.body.favoriteColor,
-		birthday: request.body.birthday,
-	};
-	const result = await mongodb.getDb().db().collection('contacts').insertOne(contact);
-	if (result.acknowledged) {
+	/*
+		#swagger.description = "Create a new contact."
+		#swagger.parameters['Contact'] = {
+			in: 'body',
+			required: true,
+			schema: { $ref: "#/definitions/Contact" }
+		}
+		#swagger.responses[200] = {
+			description: "The contact.",
+			schema: { $ref: "#/definitions/Contact" }
+		}
+	*/
+
+	try {
+		const result = await Contact.create(request.body);
+		response.set('Location', `/contacts/${result._id}`);
 		response.status(201).json(result);
-	} else {
-		response.status(500).json(result.error || 'Some error occurred while creating the contact.');
+	} catch (error) {
+		response.status(500).json(error.message || 'Some error occurred while creating the contact.');
 	}
 };
 
 const updateContact = async (request, response) => {
-	const userId = new ObjectId(request.params.id);
-	// Be aware of updateOne if you only want to update specific fields
-	const contact = {
-		firstName: request.body.firstName,
-		lastName: request.body.lastName,
-		email: request.body.email,
-		favoriteColor: request.body.favoriteColor,
-		birthday: request.body.birthday,
-	};
-	const result = await mongodb
-		.getDb()
-		.db()
-		.collection('contacts')
-		.replaceOne({_id: userId}, contact);
-	console.log(result);
-	if (result.modifiedCount > 0) {
-		response.status(204).send();
-	} else {
-		response.status(500).json(result.error || 'Some error occurred while updating the contact.');
+	/*
+		#swagger.description = "Update a contact by id."
+		#swagger.parameters['Contact'] = {
+			in: 'body',
+			required: true,
+			schema: { $ref: "#/definitions/Contact" }
+		}
+		#swagger.responses[200] = {
+			description: "The contact.",
+			schema: { $ref: "#/definitions/Contact" }
+		}
+	*/
+
+	try {
+		const result = await Contact.findByIdAndUpdate(request.params.id, request.body, {
+			runValidators: true, new: true,
+		});
+		response.status(204).json(result);
+	} catch (error) {
+		response.status(500).json(error.message || 'Some error occurred while updating the contact.');
 	}
 };
 
 const deleteContact = async (request, response) => {
-	const userId = new ObjectId(request.params.id);
-	const result = await mongodb.getDb().db().collection('contacts').remove({_id: userId}, true);
-	console.log(result);
-	if (result.deletedCount > 0) {
-		response.status(204).send();
-	} else {
-		response.status(500).json(result.error || 'Some error occurred while deleting the contact.');
+	/*
+		#swagger.description = "Delete a contact by id."
+		#swagger.responses[200] = {
+			description: "The contact.",
+			schema: { $ref: "#/definitions/Contact" }
+		}
+	*/
+
+	try {
+		const result = await Contact.findByIdAndDelete(request.params.id);
+		response.status(200).json(result);
+	} catch (error) {
+		response.status(500).json(error.message || 'Some error occurred while deleting the contact.');
 	}
 };
 
 module.exports = {
+	checkObjectId,
 	getAll,
 	getSingle,
 	createContact,
